--- a/KP Instagram Monitor/KP Instagram Monitor/Content.xaml
+++ b/KP Instagram Monitor/KP Instagram Monitor/Content.xaml
@@ -11,7 +11,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False">
+    shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot" Background="White">
@@ -27,21 +27,31 @@
             </phone:PanoramaItem>
 
             <!--Panorama item two-->
-            <phone:PanoramaItem Header="post">
-                <Grid>
-                    <TextBlock x:Name="allpost" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="368"/>
-                </Grid>
+
+            <phone:PanoramaItem Header="post detail">
+                <ListBox x:Name="ListBox1" Margin="0,0,-12,0">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,17" Background="#FFC5E9F1">
+                                <Image Height="100" Width="100" Margin="12,0,9,0" Source="{Binding link}" />
+                                <StackPanel Width="311">
+                                    <TextBlock Text="{Binding detail}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="Black" FontSize="20"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </phone:PanoramaItem>
 
             <phone:PanoramaItem Header="like data">
                 <Grid>
-                    <TextBlock x:Name="liketeks" HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="410"/>
+                    <TextBlock x:Name="liketeks"  HorizontalAlignment="Left" Margin="29,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="381" FontSize="25" />
                 </Grid>
             </phone:PanoramaItem>
 
             <phone:PanoramaItem Header="reward">
                 <Grid>
-                    <TextBlock x:Name="allreward" HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="420"/>
+                    <TextBlock x:Name="allreward" HorizontalAlignment="Left" Margin="29,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="391" FontSize="25" />
                 </Grid>
             </phone:PanoramaItem>
         </phone:Panorama>
